Modified grid layout for articles. Currently facing issue of 'trending' container not showing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 
 :root {
     --blue-basis: rgba(45, 144, 236, 0.9);
+    --light-grey: #cccfd18c;
+    --articles-colour: white;
 }
 
 body {
@@ -120,8 +122,7 @@ button {
 }
 
 .logo > div {
-    background-color: aliceblue;
-    font-size: .5rem;
+    background-color: var(--articles-colour);
 }
 
 .logo-item1 {
@@ -145,7 +146,7 @@ button {
     display: flex;
     flex: 1 auto;
     flex-direction: column;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     gap: 60px;
 }
 
@@ -159,36 +160,63 @@ button {
     content: url(images/home.svg);
 }
 
-.profile-links-container > li::before {
-    /* content: "a "; */
-}
-
 .articles {
     grid-area: 2 / 2 / -1 / -1;
-    background-color: antiquewhite;
     display: flex;
 }
 
 .projects {
-    flex: 3 1 500px;
-    background-color: aqua;
+    flex: 3 1 450px;
+    background-color: var(--light-grey);
 }
 
 .project-items {
     display: grid;
     grid-template: repeat(3, 1fr) / 1fr 1fr;
     gap: 20px;
-    margin: 10px;
+    margin: 25px 50px;
+    min-height: 90%;
 }
 
-.project-items > div {
-    background-color: white;
-    padding: 1em;
+.project-item {
+    display: grid;
+    grid-template: 1fr 2fr 1fr / 1fr 20fr;
+    background-color: var(--articles-colour);
+    border-radius: 10px;
+}
+
+.project-item > div:nth-child(1) {
+    background-color: rgb(255, 187, 0);
+    grid-area: 1 / 1 / 4 / 2;
+    border-radius: 10px 0px 0px 10px;
 }
 
 .anounc-trend-container {
-    flex: 1 2 250px;
-    background-color: aquamarine;
+    flex: 1 2 300px;
+    background-color: var(--light-grey);
     display: flex;
     flex-direction: column;
+}
+
+.anouncements {
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.trending {
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.anouncements-container,
+.trending-container > div {
+    background-color: var(--articles-colour);
+    margin: 0px;
+    flex: 1 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 50px;
+    border-radius: 10px;
 }
